verif/test/deca/syntax/invalid/provided/simple_lex-verif.res
src/test/deca/syntax/invalid/provided/simple_lex.deca:11:0: no viable alternative at input 'idf'
